--- a/Aufgabe3/index.html
+++ b/Aufgabe3/index.html
@@ -2,7 +2,8 @@
 <!doctype html>
 <html>
     <head>
-        <title>AVPRG Aufgabe 2</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <title>AVPRG Aufgabe 3</title>
     </head>
     <body>
 
